--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -172,8 +172,7 @@ jobs:
 
           echo "::set-output name=sandbox-id::$SANDBOX_ID"
 
-          yq w -d1 .flux.yaml \
-          | yq w -d1 - metadata.namespace "$DEPLOYMENT_NAME-$SANDBOX_ID" \
+          yq w -d1 .flux.yaml metadata.namespace "$DEPLOYMENT_NAME-$SANDBOX_ID" \
           | yq w -d0 - metadata.name "$DEPLOYMENT_NAME-$SANDBOX_ID" \
           | yq w -d0 - metadata.labels.sandboxId "$SANDBOX_ID" \
           | yq w -d1 - metadata.labels.sandboxId "$SANDBOX_ID" \
