add remoter-client (#3)
* add remoter-client

* improved README.md

* fix client Dockerfile, add depends on

* add no save when running

* change remoter-client to use script

--- a/remoter-client/Dockerfile
+++ b/remoter-client/Dockerfile
@@ -13,19 +13,16 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 # add GitHub PAT if required for GitHub installations.
 ARG GITHUB_PAT
 ENV GITHUB_PAT ${GITHUB_PAT}
+ENV SERVER_HOSTNAME $SERVER_HOSTNAME:6969
 
 # install pak for more streamlined installation of packages
 RUN R -e 'utils::install.packages("pak", repos = "https://r-lib.github.io/p/pak/dev/")'
 
 # install required packages
 RUN R -e 'pak::pkg_install("remoter")'
-RUN R -e 'pak::pkg_install("devtools")'
-RUN R -e 'pak::pkg_install("BiocGenerics")'
-RUN R -e 'pak::pkg_install("RJSONIO")'
-RUN R -e 'pak::pkg_install("Seurat")'
-RUN R -e 'pak::pkg_install("gprofiler2")'
-RUN R -e 'pak::pkg_install("sccore")'
-RUN R -e 'pak::pkg_install("GO.db")'
+
+# add app
+COPY src ./
 
 # ---------------------------------------------------
 # PRODUCTION BUILD
@@ -33,7 +30,8 @@ RUN R -e 'pak::pkg_install("GO.db")'
 FROM builder AS prod
 
 # start app
-CMD R -e 'require(remoter); remoter::server(port=6969)'
+ENTRYPOINT ["bash", "/var/lib/watchfile/entrypoint.sh"]
+CMD ["R", "--no-save", "-s", "-e", "require('remoter');remoter::batch(addr='remoter-server', port=6969, file='rscript.r')" ]
 
 
 # ---------------------------------------------------
@@ -47,4 +45,4 @@ FROM builder AS dev
 RUN pip install -U jedi radian PyYAML watchdog[watchmedo]
 
 # start app
-CMD R -e 'require(remoter); remoter::server(port=6969)'
+CMD ["R", "--no-save", "-s", "-e", "require('remoter');remoter::batch(addr='remoter-server', port=6969, file='rscript.r')" ]
