--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -27,7 +27,9 @@ Resources:
             return ''.join(random.choice(string.ascii_letters) for m in range(length))
 
           def handler(event, context):
-            proc = subprocess.run(f"docker run --rm --name {event['name']}-{random_string(10)} -d {event['image']}", shell=True, check=True)
+
+            task = event.get('task', '').replace('"','\\"')
+            proc = subprocess.run(f"docker run --rm --name {event['name']}-{random_string(10)} {'-d -p 6969:6969' if event['detached'] else ''} {event['image']} \"{task}\"", shell=True, check=True)
 
             return proc.returncode
       Runtime: "python3.8"
