--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -29,7 +29,9 @@ Resources:
           def handler(event, context):
 
             task = event.get('task', '').replace('"','\\"')
-            proc = subprocess.run(f"docker run --rm --name {event['name']}-{random_string(10)} {'-d -p 6969:6969' if event['detached'] else ''} {event['image']} \"{task}\"", shell=True, check=True)
+            task_str = f'\"{task}\"' if task else ''
+
+            proc = subprocess.run(f"docker run --rm --name {event['name']}-{random_string(10)} {'-d -p 6969:6969' if event['detached'] else ''} {event['image']} {task_str}", shell=True, check=True)
 
             return proc.returncode
       Runtime: "python3.8"
@@ -37,7 +39,6 @@ Resources:
   RemovePreviousPipelineContainers:
     Type: "AWS::Lambda::Function"
     Properties:
-
       FunctionName: "remove-previous-pipeline-containers"
       Handler: "index.handler"
       Role: !GetAtt LambdaExecutionRole.Arn
