--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -28,10 +28,12 @@ Resources:
 
           def handler(event, context):
 
-            task = event.get('task', '').replace('"','\\"')
-            task_str = f'\"{task}\"' if task else ''
+            task = event.get('task', '')
 
-            proc = subprocess.run(f"docker run --rm --name {event['name']}-{random_string(10)} {'-d -p 6969:6969' if event['detached'] else ''} {event['image']} {task_str}", shell=True, check=True)
+            if task:
+              task = f'\"{task}\"'
+
+            proc = subprocess.run(f"docker run --rm --name {event['name']}-{random_string(10)} {'-d -p 6969:6969' if event['detached'] else ''} {event['image']} {task}", shell=True, check=True)
 
             return proc.returncode
       Runtime: "python3.8"
