--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -176,9 +176,9 @@ jobs:
           | yq w -d0 - metadata.name "$DEPLOYMENT_NAME-$SANDBOX_ID" \
           | yq w -d0 - metadata.labels.sandboxId "$SANDBOX_ID" \
           | yq w -d1 - metadata.labels.sandboxId "$SANDBOX_ID" \
-          | yq w -d1 - data.chartRef "$CHART_REF" \
-          | yq w -d1 - data.images.remoter-server "$IMAGE_NAME-remoter-server" \
-          | yq w -d1 - data.images.remoter-client "$IMAGE_NAME-remoter-client" \
+          | yq w -d1 - data.out.chartRef "$CHART_REF" \
+          | yq w -d1 - data.out.images.remoter-server "$IMAGE_NAME-remoter-server" \
+          | yq w -d1 - data.out.images.remoter-client "$IMAGE_NAME-remoter-client" \
           > $DEPLOYMENT_NAME.yaml
 
           cat $DEPLOYMENT_NAME.yaml
