--- a/remoter-server/Dockerfile
+++ b/remoter-server/Dockerfile
@@ -22,6 +22,7 @@ RUN R -e 'pak::pkg_install("remoter")'
 RUN R -e 'pak::pkg_install("devtools")'
 RUN R -e 'pak::pkg_install("BiocGenerics")'
 RUN R -e 'pak::pkg_install("RJSONIO")'
+RUN R -e 'devtools::install_version("spatstat", version = "1.64-1")'
 RUN R -e 'pak::pkg_install("Seurat")'
 RUN R -e 'pak::pkg_install("gprofiler2")'
 RUN R -e 'pak::pkg_install("sccore")'
