Add service account + env vars to remoter server container

--- a/remoter-server/chart/values.yaml
+++ b/remoter-server/chart/values.yaml
@@ -2,3 +2,6 @@ experimentId: FILLED_IN_BY_API
 image: FILLED_IN_BY_API
 namespace: FILLED_IN_BY_API
 sandboxId: FILLED_IN_BY_API
+clusterEnv: FILLED_IN_BY_API
+awsAccountId: FILLED_IN_BY_API 
+awsRegion: FILLED_IN_BY_API
