--- a/remoter-server/chart/templates/job.yaml
+++ b/remoter-server/chart/templates/job.yaml
@@ -17,9 +17,19 @@ spec:
         sandboxId: "{{ .Values.sandboxId }}"
     spec:
       restartPolicy: Never
+      serviceAccountName: 'deployment-runner'
       containers:
       - name: "{{ .Release.Name }}"
         image: "{{ .Values.image }}"
+        env:
+          - name: CLUSTER_ENV
+            value: "{{ .Values.clusterEnv }}" 
+          - name: SANDBOX_ID
+            value: "{{ .Values.sandboxId }}"
+          - name: AWS_ACCOUNT_ID
+            value: "{{ .Values.awsAccountId }}"
+          - name: AWS_DEFAULT_REGION
+            value: "{{ .Values.awsAccountId }}"
         ports:
         - containerPort: 6969
         readinessProbe:
