--- a/remoter-server/chart/templates/job.yaml
+++ b/remoter-server/chart/templates/job.yaml
@@ -29,7 +29,7 @@ spec:
           - name: AWS_ACCOUNT_ID
             value: "{{ .Values.awsAccountId }}"
           - name: AWS_DEFAULT_REGION
-            value: "{{ .Values.awsAccountId }}"
+            value: "{{ .Values.awsRegion }}"
         ports:
         - containerPort: 6969
         readinessProbe:
