Take care of mock creds + debugging helpers

--- a/remoter-server/chart/templates/job.yaml
+++ b/remoter-server/chart/templates/job.yaml
@@ -30,6 +30,8 @@ spec:
             value: "{{ .Values.awsAccountId }}"
           - name: AWS_DEFAULT_REGION
             value: "{{ .Values.awsRegion }}"
+          - name: REMOTER_DEBUG_SLEEP
+            value: "{{ .Values.debugSleep }}" 
         ports:
         - containerPort: 6969
         readinessProbe:
