--- a/remoter-server/Dockerfile
+++ b/remoter-server/Dockerfile
@@ -41,7 +41,7 @@ FROM builder AS prod
 
 # start app
 COPY src ./
-CMD R -e 'require(remoter); remoter::server(port=6969)'
+ENTRYPOINT ["Rscript", "init.r"]
 
 
 # ---------------------------------------------------
@@ -60,4 +60,4 @@ RUN R -e 'pak::pkg_install("styler")'
 
 # start app
 COPY src ./
-CMD R -e 'require(remoter); remoter::server(port=6969)'
+ENTRYPOINT ["Rscript", "init.r"]
