--- a/remoter-server/chart/values.yaml
+++ b/remoter-server/chart/values.yaml
@@ -5,3 +5,4 @@ sandboxId: FILLED_IN_BY_API
 clusterEnv: FILLED_IN_BY_API
 awsAccountId: FILLED_IN_BY_API 
 awsRegion: FILLED_IN_BY_API
+debugSleep: 0
