--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -158,12 +158,16 @@ jobs:
 
           if [ "${{ matrix.environment }}" = "production" ]; then
             SANDBOX_ID="default"
-            CHART_REF="master"
           fi
 
           if [ "${{ matrix.environment }}" = "staging" ]; then
             SANDBOX_ID="STAGING_SANDBOX_ID"
-            CHART_REF="${{ github.event.pull_request.head.sha }}"
+          fi
+
+          if [ "${{ github.ref }}" = "refs/heads/master" ]; then
+            CHART_REF="$GITHUB_SHA"
+          else
+            CHART_REF="STAGING_CHART_REF"
           fi
 
           echo "::set-output name=sandbox-id::$SANDBOX_ID"
@@ -173,8 +177,11 @@ jobs:
           | yq w -d0 - metadata.labels.sandboxId "$SANDBOX_ID" \
           | yq w -d1 - metadata.labels.sandboxId "$SANDBOX_ID" \
           | yq w -d1 - data.out.chartRef "$CHART_REF" \
-          | yq w -d1 - data.out.images.remoter-server "$IMAGE_NAME-remoter-server" \
-          | yq w -d1 - data.out.images.remoter-client "$IMAGE_NAME-remoter-client" \
+          | yq w -d1 - spec.values.remoter-server.image "$IMAGE_NAME-remoter-client" \
+          | yq w -d1 - spec.values.remoter-client.image "$IMAGE_NAME-remoter-server" \
+          | yq w -d1 - spec.values.serviceAccount.iamRole "arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:role/pipeline-role-${{ matrix.environment }}" \
+          | yq w -d1 - "metadata.annotations[filter.fluxcd.io/remoter-server]" "glob:${IMAGE_TAG/$GITHUB_SHA/*}-remoter-server" \
+          | yq w -d1 - "metadata.annotations[filter.fluxcd.io/remoter-client]" "glob:${IMAGE_TAG/$GITHUB_SHA/*}-remoter-client" \
           > $DEPLOYMENT_NAME.yaml
 
           cat $DEPLOYMENT_NAME.yaml
