--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -176,7 +176,7 @@ jobs:
           | yq w -d0 - metadata.name "$DEPLOYMENT_NAME-$SANDBOX_ID" \
           | yq w -d0 - metadata.labels.sandboxId "$SANDBOX_ID" \
           | yq w -d1 - metadata.labels.sandboxId "$SANDBOX_ID" \
-          | yq w -d1 - data.out.chartRef "$CHART_REF" \
+          | yq w -d1 - spec.chart.ref "$CHART_REF" \
           | yq w -d1 - spec.values.remoter-server.image "$IMAGE_NAME-remoter-client" \
           | yq w -d1 - spec.values.remoter-client.image "$IMAGE_NAME-remoter-server" \
           | yq w -d1 - spec.values.serviceAccount.iamRole "arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:role/pipeline-role-${{ matrix.environment }}" \
