Change remoter server from Job to HelmRelease. Remove hardcoded server address (#7)
* Change logging order

* fix

* fix path

* Add chart_ref to ci

* bundle chart ref andd images

* Get target remoter serevr from input params

* Set CHART_REF

* Update Dockerfile

* Fix broken client JSON parsing

* Use received server address everywhere

* Make obvious missing sandboxId errors

* Debug remoter client

* Add service account + env vars to remoter server container

* Fix aws region value

* Have server print client requests

* Revert "Have server print client requests"

This reverts commit 3a97612429511e9bf54f99ddc8710544afcc9362.

* Take care of mock creds + debugging helpers

* Faster build

* Fix comments

* Proper chart ref

* Add sleep

* Fixed syntax

* Change CI tformat for better staging

* Add chart ref value to proper place in HelmRelease resource

* Change other stuff in Flux/GitHub CI

* Fix image names being assigned to the wrong thing

* Add new role and rolebinding for pipeline to grant rights to API

* Update CI with new chart value and add chart nmetadata to infra chart

* Fix configuration error that causes infra helm release to fail

* Fix error due to dashes

* Add credential process command so paws can get creds from IRSA roles

* Add better config

* Add mandatory version field to auth field

* Fix AWS config

* Remove debug stuff

* clean up debugging stuff

* Documentation + remove globals from wrapper.r

* Undo hardcoding for a faster docker build

* Remove unused value

Co-authored-by: Marcell Pek <marcell.pek@marcellp.net>
Co-authored-by: ogibson-biomage <76957896+ogibson-biomage@users.noreply.github.com>

--- a/.flux.yaml
+++ b/.flux.yaml
@@ -5,12 +5,20 @@ metadata:
   labels:
     sandboxId: FILLED_IN_BY_CI
 ---
-apiVersion: v1
-kind: ConfigMap
+apiVersion: helm.fluxcd.io/v1
+kind: HelmRelease
 metadata:
-  name: image-urls
+  name: FILLED_IN_BY_CI
   namespace: FILLED_IN_BY_CI
+  annotations:
+    fluxcd.io/automated: "true"
+    filter.fluxcd.io/remoter-server: FILLED_IN_BY_CI
+    filter.fluxcd.io/remoter-client: FILLED_IN_BY_CI
   labels:
     sandboxId: FILLED_IN_BY_CI
-data:
-  dummy: FILLED_IN_BY_CI
+spec:
+  releaseName: FILLED_IN_BY_CI
+  chart:
+    git: git@github.com:biomage-ltd/pipeline
+    path: chart-infra/
+    ref: FILLED_IN_BY_CI
