--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,12 +50,20 @@ jobs:
             echo "This is a pull request, base ref and sha set to the target branch."
             BASE_REF="refs-heads-${{ github.event.pull_request.base.ref }}"
             BASE_SHA=${{ github.event.pull_request.base.sha }}
+            # If the CI build time gets in your way while working on a PR,
+            #  temporarily hardcode these values in was similar to this
+            #  BASE_REF="refs-pull-7-merge"
+            #  BASE_SHA="ad9c5001ab4a3077790db4f04ac0b09cf5324683"
           fi
 
           if [ "${{ github.event_name }}" = "push" ]; then
             echo "This is a push, base ref and sha set to the previous commit."
             BASE_REF=$(echo $GITHUB_REF | sed 's/\//-/g')
             BASE_SHA="${{ github.event.before }}"
+            # If the CI build time gets in your way while working on a PR,
+            #  temporarily hardcode these values in was similar to this
+            #  BASE_REF="refs-pull-7-merge"
+            #  BASE_SHA="ad9c5001ab4a3077790db4f04ac0b09cf5324683"
           fi
 
           echo "::set-output name=tag::$BASE_REF-$BASE_SHA"
@@ -175,9 +183,15 @@ jobs:
           yq w -d1 .flux.yaml metadata.namespace "$DEPLOYMENT_NAME-$SANDBOX_ID" \
           | yq w -d0 - metadata.name "$DEPLOYMENT_NAME-$SANDBOX_ID" \
           | yq w -d0 - metadata.labels.sandboxId "$SANDBOX_ID" \
+          | yq w -d1 - metadata.name "$DEPLOYMENT_NAME" \
           | yq w -d1 - metadata.labels.sandboxId "$SANDBOX_ID" \
-          | yq w -d1 - data.images.remoter-server "$IMAGE_NAME-remoter-server" \
-          | yq w -d1 - data.images.remoter-client "$IMAGE_NAME-remoter-client" \
+          | yq w -d1 - spec.chart.ref "$CHART_REF" \
+          | yq w -d1 - spec.releaseName "$DEPLOYMENT_NAME" \
+          | yq w -d1 - spec.values.remoter-server.image "$IMAGE_NAME-remoter-server" \
+          | yq w -d1 - spec.values.remoter-client.image "$IMAGE_NAME-remoter-client" \
+          | yq w -d1 - spec.values.serviceAccount.iamRole "arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:role/pipeline-role-${{ matrix.environment }}" \
+          | yq w -d1 - "metadata.annotations[filter.fluxcd.io/remoter-server]" "glob:${IMAGE_TAG/$GITHUB_SHA/*}-remoter-server" \
+          | yq w -d1 - "metadata.annotations[filter.fluxcd.io/remoter-client]" "glob:${IMAGE_TAG/$GITHUB_SHA/*}-remoter-client" \
           > $DEPLOYMENT_NAME.yaml
 
           cat $DEPLOYMENT_NAME.yaml
