--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -38,6 +38,7 @@ Resources:
               "__DOCKER_GATEWAY_HOST__",
               f"--name {event['name']}-{random_string(10)}", 
               f"{'-d -p 6969:6969' if event['detached'] else ''}", 
+              f"--env SAMPLE_ID={event.get('sampleUuid', '')}",
               event['image'],
               task 
             ])
