use ATLAS BLAS/LAPACK

--- a/remoter-server/Dockerfile
+++ b/remoter-server/Dockerfile
@@ -34,6 +34,11 @@ RUN R -e 'pak::pkg_install("paws")'
 RUN R -e 'pak::pkg_install("import")'
 RUN R -e 'pak::pkg_install("ids")'
 
+# default BLAS/LAPACK issue: Seurat::FindIntegrationAnchors finds ~30 vs ~13,000 anchors
+# eventually move this up with other system installs
+RUN apt-get update && apt-get -y install libatlas3-base
+RUN update-alternatives --set libblas.so.3-x86_64-linux-gnu /usr/lib/x86_64-linux-gnu/atlas/libblas.so.3
+
 # ---------------------------------------------------
 # PRODUCTION BUILD
 # ---------------------------------------------------
