--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -28,19 +28,12 @@ Resources:
 
           def handler(event, context):
 
-            task = event.get('task', '').replace('"','\\"')
-
-            if task:
-              task = f'\"{task}\"'
-
             docker_command = ' '.join([
               "docker run --rm",
-              "__DOCKER_GATEWAY_HOST__",
               f"--name {event['name']}-{random_string(10)}", 
-              f"{'-d -p 6969:6969' if event['detached'] else ''}", 
-              f"--env SAMPLE_ID={event.get('sampleUuid', '')}",
-              event['image'],
-              task 
+              f"{'-d' if event['detached'] else ''}",
+              f"--env ACTIVITY_ARN={event.get('activityArn', '')}",
+              event['image']
             ])
 
             proc = subprocess.run(docker_command, shell=True, check=True)
@@ -48,6 +41,10 @@ Resources:
             return proc.returncode
       Runtime: "python3.8"
       Timeout: "25"
+  QualityControlActivity:
+    Type: AWS::StepFunctions::Activity
+    Properties: 
+      Name: biomage-qc-activity-development
   RemovePreviousPipelineContainers:
     Type: "AWS::Lambda::Function"
     Properties:
