--- a/qc-runner/chart/templates/job.yaml
+++ b/qc-runner/chart/templates/job.yaml
@@ -23,13 +23,15 @@ spec:
         image: "{{ .Values.image }}"
         env:
           - name: CLUSTER_ENV
-            value: "{{ .Values.clusterEnv }}" 
+            value: "{{ .Values.clusterEnv }}"
           - name: SANDBOX_ID
             value: "{{ .Values.sandboxId }}"
           - name: AWS_ACCOUNT_ID
             value: "{{ .Values.awsAccountId }}"
           - name: AWS_DEFAULT_REGION
             value: "{{ .Values.awsRegion }}"
+          - name: ACTIVITY_ARN
+            value: "{{ .Values.activityArn }}"
         ports:
         - containerPort: 6969
         readinessProbe:
