Make pipeline use Step Function Activities (#28)
* fix

* results are now processed properly

* fix

* fix

* fix

* quit on successful execution

* fix

* fix

* Remove unneeded service from k8s

* Fix build path in local runner

--- a/qc-runner/chart/templates/job.yaml
+++ b/qc-runner/chart/templates/job.yaml
@@ -23,17 +23,12 @@ spec:
         image: "{{ .Values.image }}"
         env:
           - name: CLUSTER_ENV
-            value: "{{ .Values.clusterEnv }}" 
+            value: "{{ .Values.clusterEnv }}"
           - name: SANDBOX_ID
             value: "{{ .Values.sandboxId }}"
           - name: AWS_ACCOUNT_ID
             value: "{{ .Values.awsAccountId }}"
           - name: AWS_DEFAULT_REGION
             value: "{{ .Values.awsRegion }}"
-        ports:
-        - containerPort: 6969
-        readinessProbe:
-          tcpSocket:
-            port: 6969
-          initialDelaySeconds: 15
-          timeoutSeconds: 15
+          - name: ACTIVITY_ARN
+            value: "{{ .Values.activityArn }}"
