--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -28,11 +28,16 @@ Resources:
 
           def handler(event, context):
 
+            debug_path = event.get('debugPath', '')
+
             docker_command = ' '.join([
               "docker run --rm",
               f"--name {event['name']}-{random_string(10)}", 
               f"{'-d' if event['detached'] else ''}",
               f"--env ACTIVITY_ARN={event.get('activityArn', '')}",
+              f"--env DEBUG_STEP={event.get('debugStep', '')}",
+              f"--env DEBUG_PATH={debug_path}",
+              f"-v {debug_path}:/debug",
               event['image']
             ])
 
