--- a/qc-runner/chart/templates/job.yaml
+++ b/qc-runner/chart/templates/job.yaml
@@ -32,3 +32,7 @@ spec:
             value: "{{ .Values.awsRegion }}"
           - name: ACTIVITY_ARN
             value: "{{ .Values.activityArn }}"
+          - name: DEBUG_STEP
+            value: "{{ .Values.debugStep }}"
+          - name: DEBUG_PATH
+            value: "{{ .Values.debugPath }}"
