--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -35,9 +35,9 @@ Resources:
               f"--name {event['name']}-{random_string(10)}", 
               f"{'-d' if event['detached'] else ''}",
               f"--env ACTIVITY_ARN={event.get('activityArn', '')}",
-              f"--env DEBUG_STEP={event.get('debugStep', '')}",
-              f"--env DEBUG_PATH={debug_path}",
-              f"-v {debug_path}:/debug",
+              f"--env DEBUG_STEP=__DEBUG_STEP__",
+              f"--env DEBUG_PATH=__DEBUG_PATH__",
+              f"-v __DEBUG_PATH__:/debug",
               event['image']
             ])
 
