--- a/local-runner/cf-local-container-launcher.yaml
+++ b/local-runner/cf-local-container-launcher.yaml
@@ -33,6 +33,9 @@ Resources:
               f"--name {event['name']}-{random_string(10)}", 
               f"{'-d' if event['detached'] else ''}",
               f"--env ACTIVITY_ARN={event.get('activityArn', '')}",
+              f"--env DEBUG_STEP=__DEBUG_STEP__",
+              f"--env DEBUG_PATH=__DEBUG_PATH__",
+              f"-v __DEBUG_PATH__:/debug",
               event['image']
             ])
 
