HOTFIX: make sure replacement of deployment name only happens at beginning of namespace

--- a/chart-infra/templates/pipeline-spawn-right-to-api.yaml
+++ b/chart-infra/templates/pipeline-spawn-right-to-api.yaml
@@ -30,7 +30,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: deployment-runner
-  namespace: {{ .Release.Namespace | replace "pipeline" "api" }}
+  namespace: {{ regexReplaceAll "^pipeline-" .Release.Namespace "api-" }}
 - kind: Group
   apiGroup: rbac.authorization.k8s.io
   name: state-machine-runner-group
