--- a/qc-runner/Dockerfile
+++ b/qc-runner/Dockerfile
@@ -27,8 +27,7 @@ RUN R -e 'pak::pkg_install("Seurat")'
 RUN R -e 'pak::pkg_install("gprofiler2")'
 RUN R -e 'pak::pkg_install("sccore")'
 RUN R -e 'pak::pkg_install("GO.db")'
-RUN R -e "devtools::install_github('satijalab/seurat-wrappers')"
-RUN R -e 'pak::pkg_install("batchelor")'
+RUN R -e 'pak::pkg_install("satijalab/seurat-wrappers")'
 
 # install handy development stuff
 RUN R -e 'pak::pkg_install("zeallot")'
