Add FastMNN step 6-7 (#60)
* Add FastMNN step 6-7

* Fix dockerfile

* Fix scdata

* change order

* Fix try-catch

* Change value to unisample and fastmnn

* Fix assay

* Add package

* Add dependencies

* Change to pak

* Add active.reduciton and pak

* Add var.explained

* Add comments

* Persist misc

--- a/qc-runner/Dockerfile
+++ b/qc-runner/Dockerfile
@@ -27,6 +27,8 @@ RUN R -e 'pak::pkg_install("Seurat")'
 RUN R -e 'pak::pkg_install("gprofiler2")'
 RUN R -e 'pak::pkg_install("sccore")'
 RUN R -e 'pak::pkg_install("GO.db")'
+RUN R -e 'pak::pkg_install("satijalab/seurat-wrappers")'
+RUN R -e 'pak::pkg_install("batchelor")'
 
 # install handy development stuff
 RUN R -e 'pak::pkg_install("zeallot")'
