--- a/.github/workflows/ci-develop.yaml
+++ b/.github/workflows/ci-develop.yaml
@@ -48,7 +48,7 @@ jobs:
             BASE_REF="refs-heads-${{ github.event.pull_request.base.ref }}"
             BASE_SHA=${{ github.event.pull_request.base.sha }}
             # If the CI build time gets in your way while working on a PR,
-            #  temporarily hardcode these values in was similar to this
+            #  temporarily hardcode these values in way similar to this
             #  BASE_REF="refs-pull-7-merge"
             #  BASE_SHA="ad9c5001ab4a3077790db4f04ac0b09cf5324683"
           fi
