--- a/.github/workflows/ci-develop.yaml
+++ b/.github/workflows/ci-develop.yaml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - develop
+      - 'release/**'
+      - 'hotfix/**'
   pull_request:
     branches:
       - develop
@@ -73,7 +75,7 @@ jobs:
       - id: login-ecr
         name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
-      
+
       - id: create-ecr-registry
         name: Create an ECR repository (if needed)
         # This will fail if the registry already exists, which is fine. If there is some other
@@ -89,12 +91,12 @@ jobs:
         run: |-
           echo Pulling $IMAGE_NAME from ECR.
           docker pull $IMAGE_NAME || true
-  
+
           echo Pulling $IMAGE_NAME-builder from ECR.
           docker pull $IMAGE_NAME-builder || true
         env:
           IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref-previous.outputs.tag, matrix.project) }}
-      
+
       - id: build
         name: Build Docker images
         run: |-
@@ -108,7 +110,7 @@ jobs:
         env:
           PREVIOUS_IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref-previous.outputs.tag, matrix.project) }}
           IMAGE_NAME: ${{ format('{0}/{1}:{2}-{3}', steps.login-ecr.outputs.registry, steps.ref.outputs.repo-name, steps.ref.outputs.tag, matrix.project) }}
-  
+
       - id: push
         name: Push docker images to ECR
         run: |-
@@ -147,7 +149,7 @@ jobs:
         name: Install yq for modifying the deployment spec.
         run: |-
           sudo wget https://github.com/mikefarah/yq/releases/download/3.4.1/yq_linux_amd64 -O /usr/bin/yq && sudo chmod +x /usr/bin/yq
-      
+
       - id: fill-metadata
         name: Fill out a new HelmRelease resource
         run: |-
@@ -214,7 +216,7 @@ jobs:
           REF_DASHED: ${{ steps.fill-metadata.outputs.ref-dashed }}
         run: |-
           mv $DEPLOYMENT_NAME.yaml $REF_DASHED.yaml
-      
+
       - name: Push staging deployment template to iac
         if:
           matrix.environment == 'staging'
